# DoIt

./: .gitignore  Cargo.toml  README.md  defaults.json  install.sh  tasks.json
src/: app.rs  cli.rs  errors.rs  main.rs  tasks.rs
