[package]
name = "cli-todo-list"
version = "0.2.0"
authors = ["carlos <cadusouza14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.59"
serde = {version="1.0.117", features=["derive"]}