[package]
name = "doit"
version = "0.2.0"
authors = ["carlos <cadusouza14@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A terminal-based task manager"
readme = "README.md"
repository = "https://github.com/CaduSouza1/DoIt"
categories = ["command-line-utilities"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.59"
serde = { version="1.0.117", features=["derive"] }
home = "0.5.3"
